--- a/MarieANToinette/MarieANToinette/MarieANToinette.csproj
+++ b/MarieANToinette/MarieANToinette/MarieANToinette.csproj
@@ -44,6 +44,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Picture.cs" />
+    <Compile Include="Service\IFirebaseAuthentication.cs" />
+    <Compile Include="Service\IFirebaseDatabase.cs" />
+    <Compile Include="Service\UserService.cs" />
     <Compile Include="ViewModel\PictureViewModel.cs" />
     <Compile Include="PinchToZoomContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,6 +90,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="loading.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="heart_grey.png" />
+    <EmbeddedResource Include="heart_pink.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.4.224\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.4.224\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
